k8s/deployment-beta.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zb-web-beta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zb-web-beta-deployment
  namespace: zb-web-beta
spec:
  selector:
    matchLabels:
      app: zb-web-beta
  replicas: 3
  template:
    metadata:
      labels:
        app: zb-web-beta
    spec:
      containers:
        - name: zb-web-beta
          image: scholtz2/aramid-bridge-web-app:1.2026.07.01-beta
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: web-beta-conf
              mountPath: /app/config.json
              subPath: config.json
          securityContext:
            runAsUser: 101
            runAsGroup: 101
      volumes:
        - name: web-beta-conf
          configMap:
            name: web-beta-conf
---

---
apiVersion: v1
kind: Service
metadata:
  name: zb-web-beta-service
  namespace: zb-web-beta
spec:
  type: ClusterIP
  selector:
    app: zb-web-beta
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress-beta
  namespace: zb-web-beta
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - beta.zb01.zerobridge.xyz
      secretName: tls-beta1
  rules:
    - host: beta.zb01.zerobridge.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zb-web-beta-service
                port:
                  number: 8080
